Publish AMI on successful build to master

--- a/circle.yml
+++ b/circle.yml
@@ -8,3 +8,10 @@ dependencies:
 test:
   post:
     - ./script/build
+
+deployment:
+  deploy:
+    branch: master
+    owner: nucleotides
+    commands:
+      - ./script/publish
